--- a/styles/listagem.css
+++ b/styles/listagem.css
@@ -293,15 +293,15 @@ table {
 =========================== */
 .periodo {
     font-size: 0.9rem;
-    color: #666;
+    color: black;
 }
 
 .empresa {
     font-weight: 500;
-    color: #2c3e50;
+    color: black;
 }
 
 .aluno {
     font-weight: 500;
-    color: #2c3e50;
+    color: black;
 }
