--- a/styles/visualizacao.css
+++ b/styles/visualizacao.css
@@ -20,12 +20,52 @@ h1 {
 /* ===========================
    Formulário de edição
 =========================== */
-form {
-    background-color: #fff;
-    padding: 2.5rem;
+
+#container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;    
+}
+
+h3{
+    border: 1px solid #ccc;
+    font-weight: 500;    
+    color: black;
+    font-size: 1rem;
+    width: 600px;
+    margin-left: 20px;
+    border-radius: 6px;
+    margin-top: 0px;
+    padding: 10px;
+    font-weight: 400;  
+}
+
+h2 {
+    margin-bottom: 0px;
+    font-weight: 600;    
+    color: #333;
+    font-size: 1rem;
+    width: 630px;
+    padding-left: 20px;
+}
+
+.alinhaform{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.alinha{
+    padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
-    max-width: 600px;
+    background-color: #ffffff; 
+    margin-bottom: 20px;
+    width: 650px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
 }
 
 .status-finalizado {
@@ -46,19 +86,21 @@ form {
 a {
     background-color: #007bff;
     color: #fff;
-    padding: 0.9rem 2rem;
+    padding: 0.7rem 2rem;
     font-weight: bold;
     font-size: 1rem;
     border: none;
     border-radius: 6px;
     cursor: pointer;
     transition: all 0.3s ease;
-    min-width: 140px;
+    min-width: 150px;
     justify-content: center;
     align-items: center;
     display: flex;
     text-decoration: none;
-    width: 300px;
+    width: 180px;
+    margin-left: 210px;
+    margin-bottom: 20px;
 }
 
 a:hover {
@@ -166,18 +208,26 @@ a:focus {
 =========================== */
 .form-group {
     margin-bottom: 1.5rem;
+    width: 100%;
+    box-sizing: border-box;
 }
 
+
 .radio-group {
-    background-color: #f8f9fa;
-    padding: 1rem;
-    border-radius: 5px;
+    background-color: #ffffff; /* branco pleno */
+    padding: 1.5rem; /* mais espaço interno */
+    border-radius: 10px; /* cantos suaves */
     margin-bottom: 1.5rem;
     border-left: 4px solid #007bff;
+    width: 100%; /* ocupa toda a largura do form */
+    box-shadow: 0 6px 14px rgba(0,0,0,0.08);
+    box-sizing: border-box;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .radio-group-title {
-    font-weight: 600;
+    font-weight: 500;
     color: #007bff;
     margin-bottom: 0.5rem;
     display: block;
