--- a/styles/visualizacao.css
+++ b/styles/visualizacao.css
@@ -78,8 +78,8 @@ h2 {
     font-weight: 600;
 }
 
-.status-andamento {
-    color: #ffc107;
+.status-concluido {
+    color: #028dff;
     font-weight: 600;
 }
 
